--- a/themes/cths/scss/main.scss
+++ b/themes/cths/scss/main.scss
@@ -1,3 +1,6 @@
 @import "../../../vendor/twbs/bootstrap/scss/bootstrap.scss";
+@import "general.scss";
 @import "colours.scss";
 @import "homepage.scss";
+@import "footer.scss";
+@import "sidebar.scss";
