Update content, add email sign up, add wikipage

--- a/themes/cths/scss/_colours.scss
+++ b/themes/cths/scss/_colours.scss
@@ -2,6 +2,7 @@ $light-blue: lighten(#72cee7, 10);
 $dark-blue: lighten(#295d87, 10);
 $orange: lighten(#faa825, 10);
 $text-black: #333333;
+$text-grey: lighten(#333333, 20);
 $green: lighten(#7ec348, 10);
 $dark-grey: #54595f;
 $white: #fff;
