--- a/themes/cths/scss/_homepage.scss
+++ b/themes/cths/scss/_homepage.scss
@@ -23,6 +23,17 @@
             text-decoration: underline;
         }
     }
+
+    h1,h2,h3,h4,h5,h6 {
+        a {
+            text-decoration: underline;
+
+            &:hover, &:focus {
+                text-decoration: none;
+                border-bottom: 1px #333 solid;
+            }
+        }
+    }
 }
 
 .cths-featured-article:before {
