--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,9 +22,26 @@
 }
 .cths-subscribe-form {
   margin: 15px;
-  border: solid 1px #DDD;
+  border: solid 1px #ddd;
   padding: 15px;
   display: inline-block;
   border-radius: 5px;
   margin-bottom: 25px;
+  background-color: #fff;
+}
+.home {
+  position: relative;
+}
+.cths-home-content {
+  max-width: 480px;
+}
+.cths-home-images {
+  position: absolute;
+  left: 500px;
+}
+.cths-banner-image {
+  margin: 10px 0;
+}
+.page-content {
+  background-color: #f5f5f5;
 }
