--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
                 {%- endif -%}
                 {%- endfor -%}
-                <a class="page-link" href="https://forms.gle/iTKXEWcHPVdQCxxA7">Contact</a>
+                <a class="page-link" href="https://forms.gle/9hRuFrLhaoukSbfi9">Contact</a>
             </div>
         </nav>
         {%- endif -%}
